fixing overlap

--- a/_sass/landing/signup.scss
+++ b/_sass/landing/signup.scss
@@ -11,7 +11,7 @@
     min-width: 0;
   }
 
-  @include media(xs) {
+  @include media(md) {
     align-items: center;
     padding: $md $sm 90px;
   }
@@ -23,7 +23,7 @@
     right: $md;
     width: 210px;
 
-    @include media(xs) {
+    @include media(md) {
       bottom: -8px;
       left: 0;
       margin: 0 auto;
